2009-12-26  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-insert-directory): Quote "'" in the
	switches.
	(tramp-open-connection-setup-interactive-shell): Dump stty
	settings.  Enable "neveropen" arg for all `tramp-send-command' calls.

2009-12-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-file-name-all-completions): Backward/
	XEmacs compatibility: Use `completion-ignore-case' if
	`read-file-name-completion-ignore-case' does not exist.
	(tramp-handle-dired-uncache): Add optional parameter DIR-P for
	XEmacs compatibility.  Reported by Pete Forman
	<petef4+usenet@gmail.com>.
	(tramp-handle-insert-directory): Check also for //SUBDIRED// line.

2009-12-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-file-remote-p): Expand file name only if
	there is already an established connection.
	(tramp-advice-file-expand-wildcards): Remove it.

	* tramp-compat.el (top): Autoload `tramp-handle-file-remote-p'.
	(tramp-advice-file-expand-wildcards): Moved from tramp.el.
	Activate advice for older GNU Emacs versions.  (Bug#5237)

2009-12-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-echo-mark-marker-length): New defconst.
	(tramp-echo-mark, tramp-echoed-echo-mark-regexp): Use it.
	(tramp-check-for-regexp): Check also, when an echoing shell stops
	to echo sent commands.

2009-12-09  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-insert-directory): Suppress error messages.

2009-12-07  Michael Albinus  <michael.albinus@gmx.de>

	Handle prompt rules of ksh in OpenBSD 4.5.  Reported by Raphaël
	Berbain <raphael.berbain@gmail.com>.

	* tramp.el (tramp-end-of-output): Move up.  Use `#' and `$'
	characters.
	(tramp-initial-end-of-output): New defconst.
	(tramp-methods, tramp-find-shell)
	(tramp-open-connection-setup-interactive-shell)
	(tramp-maybe-open-connection): Use it.
	(tramp-shell-prompt-pattern, tramp-wait-for-output): Handle
	existence of `#' and `$'.
